--- a/Samia.html
+++ b/Samia.html
@@ -11,10 +11,10 @@
 
 
 <p> My name is Samia Rahman. I am from Bangladesh.
-Now, I am in Japan for my Masters Degree and enrolled myself in The Kyoto College of Graduate Informatics (KCGI).
-Previously, I have completed my Bachelor's from National University in Bangladesh.
-After that, I had joined as an Administrative Assistant in CIPRB which is an NGO under USAID.
-My hobby is travelling, coding, programing and learn about new things </p>
+Now, I am in Japan for my Master's Degree and have enrolled in the Kyoto College of Graduate Informatics (KCGI).
+Previously, I have completed my Bachelor's from the National University in Bangladesh.
+After that, I joined as an Administrative Assistant at CIPRB which is an NGO under USAID.
+My hobby is traveling, coding, programming and learn about new things </p>
 
 <h2> <U> Samia's Home </u> </h2>
 
