--- a/Samia.html
+++ b/Samia.html
@@ -14,7 +14,7 @@
 Now, I am in Japan for my Master's Degree and have enrolled in the Kyoto College of Graduate Informatics (KCGI).
 Previously, I have completed my Bachelor's from the National University in Bangladesh.
 After that, I joined as an Administrative Assistant at CIPRB which is an NGO under USAID.
-My hobby is traveling, coding, programming and learn about new things </p>
+My hobby is traveling, coding, programming, and learning about new things </p>
 
 <h2> <U> Samia's Home </u> </h2>
 
